--- a/PlayerRegressions.html
+++ b/PlayerRegressions.html
@@ -59,7 +59,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>Player Efficiency Rating Linear Regression Features</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/PER_Regression_Features.png?raw=true" width="50%" alt="PER feature coefficients"></h1>
-            <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
+            <!-- <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p> -->
             </div>
         </div>
 
@@ -67,7 +67,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>Player Efficiency Rating Linear Regression Residuals</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/PER_residuals.png?raw=true" width="50%" alt="PER residuals"></h1>
-            <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
+            <!-- <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p> -->
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>Minutes Played Linear Regression Features</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MP_Regression_Features.png?raw=true" width="50%" alt="MP feature coefficients"></h1>
-            <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
+            <!-- <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p> -->
             </div>
         </div>
 
@@ -83,7 +83,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>Minutes Played Linear Regression Residuals</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MP_residuals.png?raw=true" width="50%" alt="MP residuals"></h1>
-            <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
+            <!-- <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p> -->
             </div>
         </div>
 
