--- a/position.html
+++ b/position.html
@@ -59,7 +59,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>Player Position Classification</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Pos_Features.png?raw=true" width="50%" alt="position features"></h1>
-            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            <!-- <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p> -->
             </div>
         </div>
 
@@ -67,7 +67,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>Player Position Stratified KNN</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Strat_KNN_Pos.png?raw=true" width="50%" alt="position knn"></h1>
-            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            <!-- <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p> -->
             </div>
         </div>
 
@@ -75,9 +75,9 @@
             <div class="col-sm-6 col-md-12">
             <h1>Team Classification</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tm_Features.png?raw=true" width="50%" alt="team features"></h1>
-            <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
-            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
 
@@ -85,7 +85,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>Team Stratified KNN</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Strat_KNN_Tm.png?raw=true" width="50%" alt="team knn"></h1>
-            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            <!-- <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p> -->
             </div>
         </div>
 
