--- a/mvp.html
+++ b/mvp.html
@@ -59,7 +59,7 @@
             <div class="col-sm-6 col-md-12">
             <h1>MVP Stats Summary</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/MVP%20Slide.png?raw=true" width="80%" alt="MVP Summary"></h1>
-            <p>MVP blurb - Turnovers for MVPs have been gradually increasing over the past decade to be the same rate as the league average. As top defenders become more effective at shutting down threats near the hoop with steals and blocks, MVPs have evolved by improving their ability to make 3 point shots from beyond the arc where shot attempts are more difficult to defend, allowing them to consistently maintain their WS. MVPs are also using other teammates more effectively to score points via assists. (AST% increase). The height of an MVP remains consistent over the past decade as well (75’’-85’’) which is substantially higher than the league average (54’’-73’’).</p>
+            <p>Turnovers for MVPs have been gradually increasing over the past decade to be the same rate as the league average. As top defenders become more effective at shutting down threats near the hoop with steals and blocks, MVPs have evolved by improving their ability to make 3 point shots from beyond the arc where shot attempts are more difficult to defend, allowing them to consistently maintain their WS. MVPs are also using other teammates more effectively to score points via assists. (AST% increase). The height of an MVP remains consistent over the past decade as well (75’’-85’’) which is substantially higher than the league average (54’’-73’’).</p>
             </div>
         </div>
 
